--- a/style.css
+++ b/style.css
@@ -1,3 +1,153 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-    background: #D3DEDC;
-  }
+  background-color: #142850;
+  color: #d0ebff;
+}
+
+h1 {
+  font-size: 5rem;
+}
+
+h4 {
+  margin-bottom: 2rem;
+  font-size: 1.3rem;
+}
+
+/* HEADER */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #27496D;
+
+  /* makes header sticky */
+  height: 3.2rem;
+  padding: 0 4rem;
+  padding-top: 0.7rem;
+  position: relative;
+
+  /* FORMAT Home */
+  text-decoration: none;
+  color: #d0ebff;
+  font-weight: 300;
+  font-size: 1.2rem;
+  transition: all 0.3s;
+}
+
+/* Nav Bar */
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #d0ebff;
+  font-weight: 300;
+  font-size: 1.2rem;
+  transition: all 0.3s;
+}
+
+/* Introduction container */
+.top-container {
+  max-width: 100rem;
+  margin: 6rem auto;
+  padding: 0 3.2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 9.6rem;
+  align-items: center;
+}
+
+.hero-img {
+  width: 80%;
+}
+
+
+/* button formatting */
+.btn,
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 2rem;
+  padding: 0.6rem 2.2rem;
+  border-radius: 9px;
+  font-weight: 500;
+  transition: all 0.3s;
+
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+}
+
+.btn--full:link,
+.btn--full:visited {
+  background-color: #0C7B93;
+  color: #d0ebff;
+}
+
+.btn--full:hover,
+.btn--full:active {
+  background-color: #27496D;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+  background-color: #d0ebff;
+  color: #555;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+  background-color: #fdf2e9;
+
+  /* Trick to add border inside */
+  box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
+}
+
+
+
+/* Helper classes */
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
+
+/* Links/ Bottom */
+/* .bottom-container {
+    background-color: #27496D;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    display: flex;
+}
+
+.footer-link {
+    color: #92A9BD;
+    margin-bottom: 100px;
+    width: 50%;
+    text-decoration: none;
+}
+
+.citing {
+    color: #7C99AC
+} */
