--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -10,6 +11,10 @@ body {
 
 h1 {
   font-size: 5rem;
+}
+
+h3 {
+  font-size: 3rem;
 }
 
 h4 {
@@ -80,6 +85,7 @@ h4 {
   text-decoration: none;
   font-size: 2rem;
   padding: 0.6rem 2.2rem;
+  margin-top: 1.2rem;
   border-radius: 9px;
   font-weight: 500;
   transition: all 0.3s;
@@ -126,7 +132,145 @@ h4 {
   color: #555;
 }
 
+/* About Me container */
+.about-me-container{
+  background-color: #27496D;
+  color: #d0ebff;
 
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  padding: 0 10rem;
+}
+
+.about-me-description {
+  font-weight: 200;
+}
+
+/* carousel details */
+#product-family-pictures {
+  background-color: #27496D;
+  color: #d0ebff;
+  width: 700px;
+  height: 400px;
+  margin: auto;
+}
+
+.product-family-carousel {
+  padding-top: 0;
+}
+
+.carousel-item {
+  padding-top: 0;
+}
+
+.carousel-text {
+  font-size: 30px;
+  color: #d0ebff;
+  text-align: center;
+  padding-bottom: 0;
+}
+
+.carosel-header-details {
+  font-size: 15px;
+  color: #d0ebff;
+  text-align: center;
+  padding-top: 0;
+}
+
+.carousel-pic {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 100%;
+  margin: 20px;
+  float: left;
+}
+
+.carousel-decription-text {
+  text-align: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+}
+
+.carousel-item {
+  padding: 25px 15%;
+}
+
+.carousel-control-prev,
+.carousel-control-next-icon {
+  filter: invert(100%);
+}
+
+/* Timeline */
+.timeline-section {
+  background-color: #27496D;
+  color: #d0ebff;
+}
+
+.timeline{
+  margin: 0 auto;
+  max-width: 750px;
+  padding: 25px;
+  display: grid;
+  grid-template-columns: 1fr 3px 1fr;
+  font-family: sans-serif;
+  color: #d0ebff;
+}
+
+.timeline-component{
+  margin: 0 20px 20px 20px;
+}
+
+.timeline-component-bg{
+  padding: 1.5em;
+  background: rgb(20, 40, 80, 0.2);
+  box-shadow: 0 0 5px rgba(0,0,0,0.4);
+  border-radius: 10px;
+}
+
+.timeline-component-bottom {
+  margin-bottom: 0;
+}
+
+.timeline-date-right{
+  text-align: right;
+}
+
+/* styles white bar */
+.timeline-middle{
+  position: relative;
+  background:#d0ebff ;
+}
+
+.timeline-point{
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 15px;
+  height: 15px;
+  background-color: #d0ebff;
+  border-radius: 50%;
+}
+
+.timeline-point-bottom {
+  top: initial;
+  bottom: 0;
+}
+
+.timeline-title{
+  margin: 0;
+  font-size: 1.15em;
+  font-weight: bold;
+  color: #a5d8ff;
+}
+
+.timeline-paragraph{
+  line-height: 1.5;
+}
 
 /* Helper classes */
 .margin-right-sm {
